--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 <ul type="circle">
 <li>овощи и фрукты: морковь, тыква, яблоки, груши, кукуруза, абрикосы, сливы, болгарский перец, в небольших количествах брокколи, стручковая фасоль, молодой зелёный горошек в стручках;</li>
 <li>различная зелень: зелёный салат, крапива, клевер, зелень укропа и петрушки; сухофрукты: изюм, курага, чернослив, сушёные яблоки, орехи (за исключением миндаля).</li>
+</ul>
 <h4>Грызунам необходим источник белка, поэтому раз в неделю рекомендуется давать им один из указанных продуктов: нежирный йогурт без добавок, кефир или творог 0–1% жирности, отваренные вкрутую куриные или перепелиные яйца.<br>
 При этом у животного всегда должна иметься в прямом доступе поилка с чистой и свежей водой.<br>
 Не рекомендуется давать хомячкам картофель, сыр, белый хлеб, каши, содержащие глютен, а также кормовые смеси, предназначенные для птиц. Категорически запрещено включать в рацион питомца лук, чеснок, специи, жирные молочные и кисломолочные продукты, косточки вишни или абрикоса, миндаль, макароны, белокочанную капусту, сладости, печенье, конфеты, мёд, макаронные изделия. Подобные запреты связаны с природной склонностью данного вида грызунов к сахарному диабету, что требует контроля потребляемого сахара и продуктов, содержащих глютен.</h4>
+<p>
+<a href=hamsterphodopus.html><font size="2" color="ff0000" face="fantasy">Вернуться назад</font></a>
+</p>
 </body>
 </html>
